# watchy-m5

./: .env.examples  .gitignore  Cargo.toml  README.MD  build.rs  partitions.csv
.cargo/: config.toml
src/: buttons.rs  buzzer.rs  display.rs  display_buf.rs  gfx.rs  lib.rs  music.rs  pink_panther.rs  player.rs  sprites.rs  tones.rs  widgets.rs
src/sprites/: geometry.rs  mod.rs  sprites.rs  vectors.rs
