[package]
edition = "2021"
name    = "watchy-m5"
version = "0.1.0"

[[bin]]
name = "watchy-m5"
path = "./src/bin/main.rs"

[dependencies]
defmt = { version = "1.0.1", features = ["alloc"] }
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.8.0", features = ["internal-heap-stats", "defmt"] }
esp-backtrace = { version = "0.16.0", features = [
  "esp32",
  "defmt",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.1", features = [
  "defmt",
  "esp32",
  "unstable",
  "psram",
  "__esp_hal_embassy"
] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32", "critical-section"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
  "defmt"
] }
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8", "defmt-timestamp-uptime"] }
esp-hal-embassy = { version = "0.8.0", features = ["esp32", "executors", "defmt"] }
esp-wifi = { version = "0.14.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32",
  "wifi",
] }

heapless = { version = "0.8.0", default-features = false, features = ["defmt-03"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
mipidsi = "0.9.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
axp192 = "0.2.0"
display-interface-spi = "0.5.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
pcf8563 = "0.1.0"
mpu6886 = "0.1.0"
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
thiserror-no-std = "2.0.2"
no-std-compat2 = "0.4.5"
esp-hal-procmacros = { version = "0.18.0", features = ["embassy"] }


[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "e05d588f726c3985266f6a7d2e732120be6c9ccf" } 
esp-wifi = { git = "https://github.com/esp-rs/esp-hal", rev = "e05d588f726c3985266f6a7d2e732120be6c9ccf" } 
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "e05d588f726c3985266f6a7d2e732120be6c9ccf" }
pcf8563 = { git = "https://github.com/hyx0329/pcf8563-rs", rev = "0c78da51d5fb429fd3c447103432a7de66cf1bed" }
mpu6886 = { git = "https://github.com/hyx0329/mpu6886-rs", rev = "0a3f8860f9e0ad5b0b6e2d600edb67de20a91fa6" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
panic = 'abort'
