[package]
edition = "2021"
name    = "watchy-m5"
version = "0.1.0"

[[bin]]
name = "watchy-m5"
path = "./src/bin/main.rs"

[features]
default = ["esp32", "lcdasync", "defmt", "second_core", "wifi"]
second_core = []
mipidsi = ["dep:mipidsi"]
defmt = ["embassy-net/defmt", "esp-backtrace/defmt", "esp-hal/defmt"]
lcdasync = ["dep:lcd-async"]
gpio_interrupt = []
ble = []
wifi = ["dep:smoltcp", "dep:embassy-net", "dep:esp-wifi"]
esp32 = [
  "esp-backtrace/esp32", 
  "esp-hal/esp32", 
  "esp-println/esp32", 
  "esp-wifi/esp32", 
  "esp-hal-embassy/esp32", 
  "esp-storage/esp32", 
  "esp-hal-ota/esp32", 
  "esp-bootloader-esp-idf/esp32"]

[dependencies]
defmt = { version = "1.0.1", features = ["alloc"] }
embassy-net = { version = "0.6.0", optional = true, features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.8.0", features = ["internal-heap-stats", "defmt"] }
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
esp-backtrace = { version = "0.17.0", features = [
  "esp32",
  "defmt",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32",
  "unstable",
  "psram",
  "__esp_hal_embassy"
] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32", "critical-section"] }
smoltcp = { version = "0.12.0", optional = true, default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
embassy-executor = { version = "0.7.0", default-features = false, features = ["defmt", "task-arena-size-20480"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-embedded-hal = { version = "0.4.0", default-features = false, features = ["defmt"]}
embassy-time = { version = "0.4.0", features = ["generic-queue-8", "defmt-timestamp-uptime"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32", "executors", "defmt"] }

esp-wifi = { version = "0.15.0", optional = true, default-features = false, features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "wifi",
  "defmt",
  # "sniffer",
] }
esp-hal-procmacros = { version = "0.19.0", features = ["embassy"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["defmt"] }
esp-storage = { version = "0.7.0", default-features = false, features = ["critical-section", "esp32", "bytewise-read"]}
esp-rom-sys = { version = "0.1.1", default-features = false, features = ["defmt", "esp32"] }
ieee80211           = { version = "0.4.0", default-features = false }
heapless = { version = "0.8.0", default-features = false, features = ["defmt-03", "ufmt"] }
static_cell = { version = "2.1.1", features = ["nightly"] }

## Graphics related dependencies
embedded-graphics = { version = "0.8.1", features = ["defmt", "nalgebra_support"] }
embedded-text = "0.7.2"
embedded-layout = "0.4.2"
embedded-canvas = { version = "0.3.1", default-features = false, features = ["alloc"]}
embedded-graphics-framebuf = "0.5.0"
mipidsi = { version = "0.9.0", optional = true }
lcd-async = { version = "0.1.1", optional = true }
u8g2-fonts = { version = "0.7.1", default-features = false, features = ["embedded_graphics_textstyle"]}
micromath = { version = "2.1.0", features = ["num-traits", "vector", "quaternion"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
embedded-physics = {version = "*", path = "../embedded-physics" }


embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal = { version = "1.0", features = ["defmt-03"] }
pcf8563 = "0.1.0"
mpu6886 = "0.1.0"
thiserror-no-std = "2.0.2"
portable-atomic-util = { version = "0.2.4", features = ["alloc"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"]}
cfg-if = { version = "1.0.1" }
esp-hal-ota = { version = "0.4.3", default-features = false, features = ["esp32"] }



[patch.crates-io]
# esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "e05d588f726c3985266f6a7d2e732120be6c9ccf" } 
# esp-wifi = { git = "https://github.com/esp-rs/esp-hal", rev = "e05d588f726c3985266f6a7d2e732120be6c9ccf" } 
# esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "e05d588f726c3985266f6a7d2e732120be6c9ccf" }
pcf8563 = { git = "https://github.com/hyx0329/pcf8563-rs", rev = "0c78da51d5fb429fd3c447103432a7de66cf1bed" }
mpu6886 = { git = "https://github.com/hyx0329/mpu6886-rs", rev = "0a3f8860f9e0ad5b0b6e2d600edb67de20a91fa6" }
lcd-async = { path = "../lcd-async"}
# esp-display-interface-spi-dma = { path = "../esp-display-interface-spi-dma"}

[build-dependencies]
dotenvy = "0.15.7"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
panic = 'abort'
